--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,9 @@ terminaltables = "^3.1.10"
 black = "^22.10.0"
 isort = "^5.10.1"
 
+[tool.poetry.scripts]
+licenseman = "licenseman:main"
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
